# undergraduate-practice

./: .gitignore  README.md  build.sh  clear.sh
report/: compile_tex.sh  undergraduate-practice.tex
src/: CMakeLists.txt
src/hdrs/: coordinate_descent.hpp  elementary_conjuction.hpp  polynomial.hpp  variable.hpp  zero_polynomial.hpp
src/impl/: CMakeLists.txt  coordinate_descent.cpp  elementary_conjuction.cpp  polynomial.cpp  variable.cpp  zero_polynomial.cpp
tests/: 9sym  ryy6  test1  test10  test2  test3  test4  test5  test6  test7  test8  test9  xor5
